Try to get a consequence registry set up